--- a/UNIP/Views/Home/Index.cshtml
+++ b/UNIP/Views/Home/Index.cshtml
@@ -1,118 +1,117 @@
-﻿@{
+﻿﻿@{
     ViewBag.Title = "Home Page";
 }
 
-@model UNIP.ServiceInterface.IUsuarioPF;
 
-<section id="cadastro1" style="padding: 13rem 0;">
-    <div class="container">
-        <br /><br />
-        @using (Html.BeginForm("Usuario", "Cadastro", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <div class="text-danger text-center">  @ViewBag.Erro</div>
+@model UNIP.Models.DT_Cadastro
 
-            <form name="sentMessage" id="contactForm" novalidate>
-                <div class="form-group col-xs-12 text-center">
-                    @Html.LabelFor(model => model.Nome, "Nome Completo:", htmlAttributes: new { @class = "control-label col-md-2", @placeholder = "Nome", @value = ViewBag.Nome, @style = "float:left" })
-                    <div class="col-md-6" style="margin: auto;">
-                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.CPF, "CPF:", htmlAttributes: new { @class = "control-label col-md-4", @placeholder = "CPF", @value = ViewBag.CPF, @style = "float:left" })
-                            <div class="col-md-4" id="cadastro1" style="margin: auto;margin-left:275px;">
-                                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
-                                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-              
-               
-             
-                <div class="row">
-                    <div class="col-lg-6 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.Telefone, "Telefone:", htmlAttributes: new { @class = "control-label col-md-4", @style = "float:left" })
-                            <div class="col-md-4" id="cadastro1" style="margin: auto;margin-left:275px;">
-                                @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control", @type = "text" } })
-                                @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger", @style = "width: 190px;margin-top: 5px;display: grid;font-size: 12px; " })
-                            </div>
-                        </div>
-                    </div>
-                   
-                </div>
-                <div class="form-group text-center">
-                    <div class="form-group col-xs-12">
-                        @Html.LabelFor(model => model.Cep, "Cep:", htmlAttributes: new { @class = "control-label col-md-2", @placeholder = "Cep", @style = "float:left" })
-                        <div class="col-md-3" id="cadastro1" style="margin: auto;margin-left:275px;">
-                            @Html.EditorFor(model => model.Cep, new { htmlAttributes = new { @class = "form-control", onchange = "textCep_Leave()" } })
-                            @Html.ValidationMessageFor(model => model.Cep, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group text-center">
-                    @Html.LabelFor(model => model.Endereco, "Endereço:", htmlAttributes: new { @class = "control-label col-md-2", @style = "float:left" })
-                    <div class="col-md-6" style="margin: auto;">
-                        @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Endereco, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-               
-                    <div class="col-lg-2 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.Numero, "Número:", htmlAttributes: new { @class = "control-label col-md-2", @style = "float:left; padding-left: 10px" })
-                            <div class="col-md-3" id="cadastro1" style="margin: auto;">
-                                @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control", @style = "width:80px", @type = "text" } })
-                                @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger", @style = "display: grid;" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-7 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.Bairro, "Bairro:", htmlAttributes: new { @class = "control-label col-md-4", @style = "float:left" })
-                            <div class="col-md-6" id="cadastro1" style="margin: auto;margin-left:275px;">
-                                @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Bairro, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-7 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.Cidade, "Cidade:", htmlAttributes: new { @class = "control-label col-md-4", @style = "float:left" })
-                            <div class="col-md-6" id="cadastro1" style="margin: auto;margin-left:275px;">
-                                @Html.EditorFor(model => model.Cidade, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Cidade, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 text-center">
-                        <div class="form-group text-center">
-                            @Html.LabelFor(model => model.Estado, "Estado:", htmlAttributes: new { @class = "control-label col-md-2", @style = "float:left; padding-left: 10px" })
-                            <div class="col-md-3" id="cadastro1" style="margin: auto;">
-                                @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "form-control", @style = "width:80px", @type = "text" } })
-                                @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger", @style = "display: grid;" })
-                            </div>
-                        </div>
-                    </div>
+    <div class="form-horizontal">
+        <h4>Cliente</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.NOME, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NOME, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NOME, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ENDERECO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ENDERECO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ENDERECO, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.LOGRADOURO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LOGRADOURO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LOGRADOURO, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.NUMERO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NUMERO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NUMERO, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.CEP, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CEP, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.BAIRRO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BAIRRO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BAIRRO, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.CIDADE, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CIDADE, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CIDADE, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ESTADO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ESTADO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ESTADO, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Telefone, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Telefone, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.DDD, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DDD, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DDD, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.TIPO, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.TIPO, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TIPO, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                    <div class="form-group text-center" style="margin: auto;">
-                        <div class="form-group col-xs-12" style="margin: auto;">
-                            <button type="submit" class="btn btn-success btn-lg">Proximo</button>
-                        </div>
-                    </div>
 
-            </form>
-        }
+
+
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Registrar Usuário" class="btn btn-default" />
+            </div>
+        </div>
     </div>
-    </div>
-    </div>
-</section>
+}
+<div>
+    @Html.ActionLink("Retornar", "Index")
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
